--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>git init</h1>
     <ol>
         <li>프로젝트 폴더를 vscode로 연다</li>
         <li>git init</li>
+        <li>git add .</li>
         <li>git commit -m "첫번째 커밋"</li>
     </ol>
 </body>
